kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wraith
  labels:
    app: wraith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wraith
  template:
    metadata:
      name: wraith
      labels:
        app: wraith
    spec:
      containers:
        - name: wraith
          image: ghcr.io/zgamelogic/wraith:master
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
