kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wraith
spec:
  selector:
    app: wraith
  ports:
    - protocol: TCP
      port: 2002
      targetPort: 2002
      nodePort: 30010
  type: NodePort
