kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wraith
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls.passthrough: "true"
spec:
  rules:
    - host: cluster.zgamelogic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wraith
                port:
                  number: 2002
